[metadata]
name = nest_thermostat_exporter
author = Thomas Helander
author-email = thomas.helander@gmail.com
summary = Prometheus exporter for Nest thermostats
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    nest_thermostat_exporter

[entry_points]
console_scripts =
    nest_thermostat_exporter = nest_thermostat_exporter.main:main
